<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white_black"
    tools:context="com.example.playlistmaker.mediateka.ui.fragments.CreatePlaylistFragment">


    <ImageButton

        style="@style/BackButton"
        android:id="@+id/backButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back_button" />


    <TextView
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@id/backButton"
        app:layout_constraintStart_toEndOf="@id/backButton"
        android:layout_height="@dimen/dp_48"
        android:layout_marginStart="@dimen/dp_12"
        android:text="@string/newPlylist"
        style="@style/TopText" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/create_button_guideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="76dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/image_guideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="406dp" />


    <ImageButton
        android:id="@+id/addPhoto"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_26"
        android:layout_marginEnd="@dimen/dp_24"
        android:adjustViewBounds="true"
        android:background="@drawable/add_photo_rectangle"
        android:clickable="true"
        android:gravity="center"
        android:scaleType="centerInside"
        android:src="@drawable/add_photo"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintBottom_toTopOf="@id/image_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        style="@style/CustomOutlineBox"
        app:layout_constraintTop_toBottomOf="@id/addPhoto"
        app:layout_constraintBottom_toTopOf="@id/descriptionField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_32"
        android:hint="@string/namePlaylist"
        android:textColorHint="@color/black_standart_white"


        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EditTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@drawable/cursor"
            style="@style/EditTextStyle"

            />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionField"
        style="@style/CustomOutlineBox"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:hint="@string/descripyionPlaylist"
        app:layout_constraintEnd_toEndOf="@id/textField"
        app:layout_constraintStart_toStartOf="@id/textField"
        app:layout_constraintTop_toBottomOf="@id/textField"
        android:textColorHint="@color/black_standart_white"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@drawable/cursor"
            style="@style/EditTextStyle"

            />


    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/createButton"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="@dimen/dp_17"
        android:layout_marginEnd="@dimen/dp_17"
        android:layout_marginBottom="@dimen/dp_32"
        android:background="@drawable/create_button_selector"
        android:clickable="true"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center"
        android:text="@string/createButton"
        android:textColor="@color/white"
        android:textSize="@dimen/dp_16"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/create_button_guideline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>